force-app/main/default/objects/Gig_Employee__c/Gig_Employee__c.object-meta.xml
<CustomObject>
    <label>Gig Employee</label>
    <nameField>
        <label>Gig Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gig Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>