force-app/main/default/objects/Gig_Employee__c/fields/gigID__c.field-meta.xml
<CustomField>
    <fullName>gigID__c</fullName>
    <displayFormat>A-{000}</displayFormat>
    <label>gigID</label>
    <type>AutoNumber</type>
</CustomField>