force-app/main/default/objects/Gig_Employee__c/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Headquarters</label>
    <referenceTo>Headquarters__c</referenceTo>
    <relationshipLabel>Gig Employees</relationshipLabel>
    <relationshipName>Gig_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>