force-app/main/default/objects/Gig_Employee__c/recordTypes/Seasoned.recordType-meta.xml
<RecordType>
    <fullName>Seasoned</fullName>
    <active>true</active>
    <label>Seasoned</label>
</RecordType>