force-app/main/default/objects/Gig_Employee__c/validationRules/Active_Needs_HQ.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Needs_HQ</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c ,  ISBLANK(Headquarters__c )  )</errorConditionFormula>
    <errorMessage>Active Employees Require a Headquarters</errorMessage>
</ValidationRule>