force-app/main/default/objects/Gig_Employee__c/listViews/Gig_Approvers_Gig_Employee.listView-meta.xml
<ListView>
    <fullName>Gig_Approvers_Gig_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>Gig Approvers</label>
    <queue>Gig_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>